--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "debug": "^2.2.0",
     "fs-extra": "^3.0.1",
     "lodash": "^4.13.1",
-    "node-resemble-js": "0.0.5",
+    "node-resemble-js": "^0.2.0",
     "nodeclient-spectre": "^1.0.3",
     "platform": "^1.3.1",
     "wdio-screenshot": "^0.6.0"
